--- a/index.html
+++ b/index.html
@@ -435,18 +435,18 @@
           <div class="grid-item portfolio-1 portfolio-2">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-1.png" alt="card" class="object-image">
+                <img src="./image/video-1.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS CONTENT AND EDITING REEL</h3>
                     <span class="project-card__category">trailer</span>
                   </div>
-                  <span class="project-card__date">2020</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/pvoYLXJw-H0" data-fancybox class="project-card__button  hvr-fill-black">
+                  <span href="https://vimeo.com/848027482" data-fancybox class="project-card__button  hvr-fill-black">
                     view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                   </span>
                 </div>
@@ -457,18 +457,18 @@
           <div class="grid-item  portfolio-1 portfolio-3">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-0.png" alt="card" class="object-image">
+                <img src="./image/video-2.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">KILLER MIKE at the TABERNACLE ATL</h3>
                     <span class="project-card__category">Color grading</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/kueRUAkN3GM" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -476,18 +476,18 @@
           <div class="grid-item portfolio-1 portfolio-2">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-3.png" alt="card" class="object-image">
+                <img src="./image/video-3.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS ACTION TRAILER PROJECT</h3>
                     <span class="project-card__category">Special Moments</span>
                   </div>
-                  <span class="project-card__date">2021</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/llbIQ7ez_UE" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/818195463" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -495,18 +495,18 @@
           <div class="grid-item portfolio-2 portfolio-3">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-2.png" alt="card" class="object-image">
+                <img src="./image/video-4.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS DRAMA TRAILER PROJECT</h3>
                     <span class="project-card__category">Special Moments</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/60xyQ_rEpwI" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/805373736" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -514,18 +514,18 @@
           <div class="grid-item portfolio-1 portfolio-3">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-4.png" alt="card" class="object-image">
+                <img src="./image/video-5.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS ACTION DRAMA TRAILER PROJECT</h3>
                     <span class="project-card__category">Color grading</span>
                   </div>
-                  <span class="project-card__date">2022</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/zshummlVhs4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/814551078" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -534,18 +534,18 @@
           <div class="grid-item portfolio-2 portfolio-3">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-5.jpg" alt="card" class="object-image">
+                <img src="./image/video-6.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS EDITNG REEL 3</h3>
                     <span class="project-card__category">trailer</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/e83Fnt8vRvU" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/800142920" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -553,18 +553,18 @@
           <div class="grid-item portfolio-1 portfolio-2">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-6.jpg" alt="card" class="object-image">
+                <img src="./image/video-7.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS COLOR REEL</h3>
                     <span class="project-card__category">trailer</span>
                   </div>
-                  <span class="project-card__date">2021</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/SS4NBmDYOI4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/799722892" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -572,18 +572,18 @@
           <div class="grid-item portfolio-1 portfolio-2">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/grading.png" alt="card" class="object-image">
+                <img src="./image/video-8.avif" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <h3 class="project-card__title">ZONE PRODUCTIONS EDITNG REEL 2</h3>
                     <span class="project-card__category">Color grading</span>
                   </div>
-                  <span class="project-card__date">2020</span>
+                  <!--<span class="project-card__date">2020</span>-->
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://youtu.be/D8GE_IFm1S4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/800136617" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -733,13 +733,14 @@
                     At [Your Post Production Company Name], we are dedicated to bringing your artistic vision to
                     life. Our team of passionate post-production experts shares your commitment to cinematic
                     excellence. Together, we'll refine your visuals, perfect your soundscapes, and weave together
-                    the elements that make your film a true masterpiece.
+                    the elements that make your film a true masterpiece. <br>
                     If you're an indie high art filmmaker ready to embark on a transformative post-production
                     journey, we invite you to join us at [Your Post Production Company Name]. Let's collaborate
-                    and create something truly extraordinary.
+                    and create something truly extraordinary. <br>                    
                     By crafting a detailed and evocative description of your ideal clients, you'll attract filmmakers
                     who resonate with your company's values and are eager to collaborate on projects that align
                     with their artistic aspirations.
+
                   </div>
                 </div>
               </div>
