--- a/index.html
+++ b/index.html
@@ -672,22 +672,22 @@
         <div class="award-content-wrapper">
           <div class="row row--custom gutter-y-40">
             <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
-                <img class="client-img-mobile" src="./image/client-1.webp" alt="">
+                <img class="client-img-mobile" src="./image/client-1.jfif" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
-              <img class="client-img-mobile" src="./image/client-2.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-2.jfif" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3 text-center">
-              <img class="client-img-mobile" src="./image/client-3.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-3.jfif" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
-              <img class="client-img-mobile" src="./image/client-6.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-4.jfif" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
-              <img class="client-img-mobile" src="./image/client-5.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-5.jfif" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3 text-center">
-              <img class="client-img-mobile" src="./image/client-4.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-6.jfif" alt="">
             </div>
             <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12 text-center">
               <img class="client-img-mobile" src="./image/client-7.png" alt="">
