--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Video Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <div class="video-section ">
+   <!-- <div class="video-section ">
       <div class="row">
         <div class="col-lg-12">
           <div class="hero-video-block position-relative">
@@ -605,7 +605,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Award Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
