design tuning changes

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
               <img class="client-img-mobile" src="./image/client-6.jfif" alt="">
             </div>
             <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12 text-center">
-              <img class="client-img-mobile" src="./image/client-7.png" alt="">
+              <img class="client-img-mobile" src="./image/client-7.jfif" alt="">
             </div>
           </div>
         </div>
@@ -730,17 +730,16 @@
                 </button>
                 <div id="faq-item" class="accordion-collapse collapse show" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    At [Your Post Production Company Name], we are dedicated to bringing your artistic vision to
+                    At Zone Production, we are dedicated to bringing your artistic vision to
                     life. Our team of passionate post-production experts shares your commitment to cinematic
                     excellence. Together, we'll refine your visuals, perfect your soundscapes, and weave together
-                    the elements that make your film a true masterpiece. <br>
+                    the elements that make your film a true masterpiece.<br>
                     If you're an indie high art filmmaker ready to embark on a transformative post-production
-                    journey, we invite you to join us at [Your Post Production Company Name]. Let's collaborate
+                    journey, we invite you to join us at Zone Production. Let's collaborate
                     and create something truly extraordinary. <br>                    
                     By crafting a detailed and evocative description of your ideal clients, you'll attract filmmakers
                     who resonate with your company's values and are eager to collaborate on projects that align
                     with their artistic aspirations.
-
                   </div>
                 </div>
               </div>
@@ -943,7 +942,7 @@
             <div class="footer-section__content-block">
               <div class="footer-section__content-text">
                 <div class="footer-brand">
-                  <img src="./image/logo.svg" alt="image alt">
+                  <img src="./image/logo-lg-1.png" alt="image alt">
                 </div>
                 <p>
                   High-End Visuals, Cinematic Sound.
