--- a/project-details.html
+++ b/project-details.html
@@ -370,7 +370,7 @@
           <div class="footer-section__content-block">
             <div class="footer-section__content-text">
               <div class="footer-brand">
-                <img src="./image/logo.svg" alt="image alt">
+                <img src="./image/logo-lg-1.png" alt="image alt">
               </div>
               <p>
                 High-End Visuals, Cinematic Sound.
