form issue fixed and linked with client email

--- a/project-details.html
+++ b/project-details.html
@@ -376,8 +376,8 @@
                 High-End Visuals, Cinematic Sound.
               </p>
             </div>
-            <form action="https://formspree.io/f/xknlbrzg" method="POST" class="newsletter-form-1">
-              <input type="email" placeholder="Enter your email" class="form-control">
+            <form action="https://formspree.io/f/xrgwkonl" method="POST" class="newsletter-form-1">
+              <input type="email" name="email" placeholder="Enter your email" class="form-control">
               <button class="submit-button icon-arrow-corner text-primary btn-reset"><i class="fa-solid fa-arrow-right"></i></button>
             </form>
           </div>
