--- a/index.html
+++ b/index.html
@@ -878,16 +878,16 @@
               <h2 class="content-title heading-md mb-32">Contact our support team to grow your business</h2>
             </div>
             <div class="contact-form">
-              <form action="https://formspree.io/f/xknlbrzg" method="POST">
+              <form action="https://formspree.io/f/xrgwkonl" method="POST">
                 <div class="row gutter-y-default">
                   <div class="col-lg-6">
-                    <input type="text" placeholder="Full Name" class="form-control">
+                    <input type="text" name="fullname" placeholder="Full Name" class="form-control">
                   </div>
                   <div class="col-lg-6">
-                    <input type="text" placeholder="Phone Number" class="form-control">
+                    <input type="text" name="phonenumber" placeholder="Phone Number" class="form-control">
                   </div>
                   <div class="col-lg-12">
-                    <input type="email" placeholder="Email Address" class="form-control">
+                    <input type="email" name="email" placeholder="Email Address" class="form-control">
                   </div>
                   <div class="col-lg-12">
                     <textarea name="message" placeholder="Write Your Message" class="form-control"></textarea>
@@ -948,8 +948,8 @@
                   High-End Visuals, Cinematic Sound.
                 </p>
               </div>
-              <form action="https://formspree.io/f/xknlbrzg" method="POST" class="newsletter-form-1">
-                <input type="email" placeholder="Enter your email" class="form-control">
+              <form action="https://formspree.io/f/xrgwkonl" method="POST" class="newsletter-form-1">
+                <input type="email" name="email" placeholder="Enter your email" class="form-control">
                 <button class="submit-button icon-arrow-corner text-primary btn-reset"><i class="fa-solid fa-arrow-right"></i></button>
               </form>
             </div>
