--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                 </button>
                 <div id="faq-item" class="accordion-collapse collapse show" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    At Zone Production, we are dedicated to bringing your artistic vision to
+                    At Zone Productions, we are dedicated to bringing your artistic vision to
                     life. Our team of passionate post-production experts shares your commitment to cinematic
                     excellence. Together, we'll refine your visuals, perfect your soundscapes, and weave together
                     the elements that make your film a true masterpiece.<br>
@@ -822,7 +822,7 @@
         <div class="row gutter-y-default justify-content-center justify-content-lg-between">
           <div class="col-lg-5 col-md-7 col-sm-8 col-xs-9">
             <div class="contact-content__image">
-              <img src="./image/contact-img.jfif" alt="" class="w-100">
+              <img src="./image/contact-img.png" alt="" class="w-100">
             </div>
           </div>
           <div class="col-xl-6 col-lg-6 col-md-8">
