--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
                   WE ARE A YOUNG & CREATIVE POST-PRODUCTION COMPANY
                 </h1>
                 <p>
-                  At ZONE PRODUCTIONS we specialize in creating Film and TV series Promo Trailers and Color Grading. Based in Atlanta, GA, We will visually elevate your narratives by transforming your footage into extraordinary experiences. At ZONE PRODUCTIONS, we are more than just a post-production company. We also have expertise in shooting special moments and events.
+                  ZONE PRODUCTIONS is a post-production company that specializes in creating promo trailers for Films and TV shows. <br>
+                  We are more than just a post-production house at ZONE PRODUCTIONS we are also skilled at capturing important moments and events.
                 </p>
               </div>
             </div>
@@ -335,8 +336,7 @@
             <div class="hero-content__details" id="services">
               <div class="content__details-left">
                 <wix-video id="videoContainer_comp-lkc2iw1h" data-video-info="{&quot;fittingType&quot;:&quot;fill&quot;,&quot;alignType&quot;:&quot;center&quot;,&quot;hasBgScrollEffect&quot;:&quot;&quot;,&quot;bgEffectName&quot;:&quot;&quot;,&quot;videoId&quot;:&quot;7b147e_904fd8ba0d2e499093dbb6fc3d25fb84&quot;,&quot;videoWidth&quot;:1920,&quot;videoHeight&quot;:1080,&quot;qualities&quot;:[{&quot;quality&quot;:&quot;360p&quot;,&quot;size&quot;:230400,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/360p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;480p&quot;,&quot;size&quot;:409920,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/480p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;720p&quot;,&quot;size&quot;:921600,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/720p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;1080p&quot;,&quot;size&quot;:2073600,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4&quot;}],&quot;isVideoDataExists&quot;:&quot;1&quot;,&quot;videoFormat&quot;:&quot;mp4&quot;,&quot;playbackRate&quot;:1,&quot;autoPlay&quot;:true,&quot;containerId&quot;:&quot;comp-lkc2iw1h&quot;,&quot;animatePoster&quot;:&quot;none&quot;}" class="bX9O_S bgVideo yK6aSC">
-                  <video id="comp-lkc2iw1h_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4" style="height: 220px; width: 100%; object-fit: cover; object-position: center center; opacity: 1; margin-bottom: -8px;"></video>
-                  
+                  <video id="comp-lkc2iw1h_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4" style="height: 220px; width: 100%; object-fit: cover; object-position: center center; opacity: 1; margin-bottom: -8px;"></video>    
                 </wix-video>
                 
                 <div class="details-content">
