video link updated

--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@
     <div class="hero-section-02">
       <div class="hero-fluid-slider" id="heroSlider">
         <div class="hero-slide-single bg-image overlay-07 video-bg-mobile">
-          <wix-video id="videoContainer_comp-lkbq9s4r" data-video-info="{&quot;fittingType&quot;:&quot;fill&quot;,&quot;alignType&quot;:&quot;center&quot;,&quot;hasBgScrollEffect&quot;:&quot;&quot;,&quot;bgEffectName&quot;:&quot;&quot;,&quot;videoId&quot;:&quot;7b147e_a39dce332ca14b1abb79c6b0446f7618&quot;,&quot;videoWidth&quot;:1920,&quot;videoHeight&quot;:1080,&quot;qualities&quot;:[{&quot;quality&quot;:&quot;360p&quot;,&quot;size&quot;:230400,&quot;url&quot;:&quot;video/7b147e_a39dce332ca14b1abb79c6b0446f7618/360p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;480p&quot;,&quot;size&quot;:409920,&quot;url&quot;:&quot;video/7b147e_a39dce332ca14b1abb79c6b0446f7618/480p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;720p&quot;,&quot;size&quot;:921600,&quot;url&quot;:&quot;video/7b147e_a39dce332ca14b1abb79c6b0446f7618/720p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;1080p&quot;,&quot;size&quot;:2073600,&quot;url&quot;:&quot;video/7b147e_a39dce332ca14b1abb79c6b0446f7618/1080p/mp4/file.mp4&quot;}],&quot;isVideoDataExists&quot;:&quot;1&quot;,&quot;videoFormat&quot;:&quot;mp4&quot;,&quot;playbackRate&quot;:1,&quot;autoPlay&quot;:true,&quot;containerId&quot;:&quot;comp-lkbq9s4r&quot;,&quot;animatePoster&quot;:&quot;none&quot;}" class="bX9O_S bgVideo yK6aSC">
-            <video id="comp-lkbq9s4r_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_a39dce332ca14b1abb79c6b0446f7618/1080p/mp4/file.mp4" style="height: 100%; width: 100%; object-fit: contain; object-position: center center; opacity: 1;"></video>
-          </wix-video>
+          <video id="comp-lkbq9s4r_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_ccd8a40378ac4fe1bdad1c6a1bae9015/1080p/mp4/file.mp4" style="width: 100%; object-fit: cover; object-position: center center; opacity: 1;"></video>
+          
           <div class="container">
             <!--<div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
@@ -335,9 +334,7 @@
             </div>
             <div class="hero-content__details" id="services">
               <div class="content__details-left">
-                <wix-video id="videoContainer_comp-lkc2iw1h" data-video-info="{&quot;fittingType&quot;:&quot;fill&quot;,&quot;alignType&quot;:&quot;center&quot;,&quot;hasBgScrollEffect&quot;:&quot;&quot;,&quot;bgEffectName&quot;:&quot;&quot;,&quot;videoId&quot;:&quot;7b147e_904fd8ba0d2e499093dbb6fc3d25fb84&quot;,&quot;videoWidth&quot;:1920,&quot;videoHeight&quot;:1080,&quot;qualities&quot;:[{&quot;quality&quot;:&quot;360p&quot;,&quot;size&quot;:230400,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/360p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;480p&quot;,&quot;size&quot;:409920,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/480p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;720p&quot;,&quot;size&quot;:921600,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/720p/mp4/file.mp4&quot;},{&quot;quality&quot;:&quot;1080p&quot;,&quot;size&quot;:2073600,&quot;url&quot;:&quot;video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4&quot;}],&quot;isVideoDataExists&quot;:&quot;1&quot;,&quot;videoFormat&quot;:&quot;mp4&quot;,&quot;playbackRate&quot;:1,&quot;autoPlay&quot;:true,&quot;containerId&quot;:&quot;comp-lkc2iw1h&quot;,&quot;animatePoster&quot;:&quot;none&quot;}" class="bX9O_S bgVideo yK6aSC">
-                  <video id="comp-lkc2iw1h_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4" style="height: 220px; width: 100%; object-fit: cover; object-position: center center; opacity: 1; margin-bottom: -8px;"></video>    
-                </wix-video>
+                <video id="comp-lkc2iw1h_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_904fd8ba0d2e499093dbb6fc3d25fb84/1080p/mp4/file.mp4" style="height: 220px; width: 100%; object-fit: cover; object-position: center center; opacity: 1; margin-bottom: -8px;"></video>
                 
                 <div class="details-content">
                   <h4>TRAILERS</h4>
@@ -347,7 +344,7 @@
                 </div>
               </div>
               <div class="content__details-right">
-                <img class="grading" src="./image/grading.png" alt="">
+                <video id="comp-lkc2iw1h_video" class="K8MSra" role="presentation" crossorigin="anonymous" playsinline="" preload="auto" muted="" loop="" tabindex="-1" autoplay="" src="https://video.wixstatic.com/video/7b147e_64a6fb0175d14cb0a2b86b69c56b5a7c/1080p/mp4/file.mp4" style="height: 220px; width: 100%; object-fit: cover; object-position: center center; opacity: 1; margin-bottom: -8px;"></video>
                 <div class="details-content">
                   <h4>COLOR CORRECTION / GRADING</h4>
                   <h5>COLOR MOOD.</h5>
